2005-01-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/NameEdit.py: Fix patronymic show/save.

2005-01-18 Eero Tamminen <eerot@sf>
	* src/plugins/GraphViz.py:
	  - Content options are now on the Report tab, Layout/looks
	    options are left to GraphViz tab
	  - Remade option lists, there's now a new class that keeps them
	  - Moved lists from different places in code to the new class
	  - Added 'rankdir' option for graph direction and 'latin'
	    option for fonts (visible only on command line, in GUI
	    it's taken from selected font and set whether labels need
	    utf8->latin1 conversion)
	  - Changed 'colorize' option to support color filling in
	    addition to just outline color (nicer for on-screen docs)
	  - Changed the options defaults slightly (e.g. "Default" font
	    is now default, this is a bit contraversial)
	  - Non-blood relation line changed from dashed to dotted
	  - Changed three option names to be more understandable:
	    - sfn -> showfamilies
	    - repb -> placecause
	    - incda -> incdate

2005-01-18 Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Correct attribution of ini-backend.
	* configure.in: bump up the version number.

	* src/DateDisplay.py: Move common objects back to DateDisplay class.
	* src/dates/Date_ru.py: Add formats and quality.

	* src/EditPerson.py (get_place): Use "" for empty place's handle.
	* src/RelLib.py (Event.are_equal): Only compare place handles if
	at least one if them is non-empty.

	* src/Utils.py (roman, pt2cm, cm2pt): Remove functions.
	* src/ReportUtils.py (roman): Add function.
	* src/docgen/OpenOfficeDoc.py (pt2cm): Remove function.
	* src/docgen/PSDrawDoc.py (pt2cm): Remove function.
	* src/plugins/AncestorChart2.py: Use ReportUtils.
	* src/plugins/AncestorChart.py: Use ReportUtils.
	* src/plugins/DesGraph.py: Use ReportUtils.
	* src/plugins/FanChart.py: Use ReportUtils.
	* src/plugins/StatisticsChart.py: Use ReportUtils.
	* src/plugins/TimeLine.py: Use ReportUtils.
