@@ -362,13 +362,14 @@ class PSDrawDoc(BaseDoc.BaseDoc):
         self.f.write('1 setgray\n')
         self.f.write('fill\n')
         self.f.write('newpath\n')
-        self.f.write('%f cm %f cm moveto\n' % self.translate(x,y))
-        self.f.write('0 -%f cm rlineto\n' % bh)
-        self.f.write('%f cm 0 rlineto\n' % bw)
-        self.f.write('0 %f cm rlineto\n' % bh)
-        self.f.write('closepath\n')
-        self.f.write('%.4f setlinewidth\n' % box_style.get_line_width())
-        self.f.write('%.4f %.4f %.4f setrgbcolor stroke\n' % rgb_color(box_style.get_color()))
+        if box_style.get_line_width():
+            self.f.write('%f cm %f cm moveto\n' % self.translate(x,y))
+            self.f.write('0 -%f cm rlineto\n' % bh)
+            self.f.write('%f cm 0 rlineto\n' % bw)
+            self.f.write('0 %f cm rlineto\n' % bh)
+            self.f.write('closepath\n')
+            self.f.write('%.4f setlinewidth\n' % box_style.get_line_width())
+            self.f.write('%.4f %.4f %.4f setrgbcolor stroke\n' % rgb_color(box_style.get_color()))
         if text != "":
             (text,fdef) = self.encode_text(p,text)
             self.f.write(fdef)
