@@ -1,3 +1,14 @@
+2005-01-19  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/ReportUtils.py: added estimate_age and sanitize_person
+	* src/BaseDoc.py: Add checks attempting to add styles after initializing 
+	the document
+	* src/docgen/OpenOfficeDoc.py: add init assertions
+	* src/docgen/PSDrawDoc.py: fix line style in boxes
+	* src/docgen/SvgDrawDoc.py: fix line style in boxes
+
+2005-01-18  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/ReportUtils.py: added documentation
+
 2005-01-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
 	* src/NameEdit.py: Fix patronymic show/save.
 
